fix: scrollbar settings per each popular browser fix

--- a/css/style.css
+++ b/css/style.css
@@ -10,19 +10,25 @@ body {
   color: #333333;
 }
 
-::-webkit-scrollbar {
+::-webkit-scrollbar,
+::-moz-scrollbar,
+::-o-scrollbar {
   width: 5px;
   height: 5px;
   background-color: #f5fafe;
 }
 
 /* ползунок скроллбара */
-::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb,
+::-moz-scrollbar-thumb,
+::-o-scrollbar-thumb {
   background-color: #ec1f46;
   border-radius: 4px;
 }
 
-::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover,
+::-moz-scrollbar-thumb:hover,
+::-o-scrollbar-thumb:hover {
   background-color: #253861;
 }
 
